syntax = "proto3";

package dhpcs.liquidity.actor.protocol.zonevalidator;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.zonevalidator";

import "dhpcs/liquidity/grpc-protocol.proto";

message GetZoneStateCommand {
    string reply_to = 1;
    string zone_id = 2;
}

message ZoneCommandEnvelope {
    string reply_to = 1;
    string zone_id = 2;
    bytes remote_address = 3;
    bytes public_key = 4;
    int64 correlation_id = 5;
    dhpcs.liquidity.grpc.protocol.ZoneCommand command = 6;
}

message ZoneNotificationSubscription {
    string subscriber = 1;
    string zone_id = 2;
    bytes remote_address = 3;
    bytes public_key = 4;
}
